# arbor-sonata

./: .gitignore  CMakeLists.txt  bootstrap.sh  readme.md
.github/workflows/: sonata.yml
arbata/: CMakeLists.txt  arbata.cpp
example/: CMakeLists.txt  circuit_config.json  example.cpp  simulation_config.json
example/inputs/generate/: gen_spikes.py
example/network/: edge_types.csv  node_types.csv
example/network/generate/: gen_edges.py  gen_nodes.py
install-arbor/scripts/: build_arbor.sh  environment.sh
sonata/: CMakeLists.txt  csv_lib.cpp  data_management_lib.cpp  dynamics_params_helper.cpp  hdf5_lib.cpp  mpi_helper.hpp  parameters.hpp
sonata/include/sonata/: common_structs.hpp  csv_lib.hpp  data_management_lib.hpp  density_mech_helper.hpp  dynamics_params_helper.hpp  hdf5_lib.hpp  sonata_cell.hpp  sonata_exceptions.hpp  sonata_io.hpp  sonata_recipe.hpp
sonata/include/sonata/json/: json_params.hpp
test/: CMakeLists.txt
test/unit/: test_csv.cpp  test_dynamics.cpp  test_hdf5.cpp  test_io_desc.cpp  test_model_desc.cpp
test/unit/inputs/: edges.csv  nodes.csv
test/unit/inputs/generate/: gen_edges.py  gen_nodes.py  gen_spikes.py
